[gd_scene load_steps=8 format=3 uid="uid://l2ulaahw6l1c"]

[ext_resource type="Script" uid="uid://bq0siwm513xvg" path="res://modules/minigame/water_target_fishing/game/entities/fish.gd" id="1_c7cp5"]
[ext_resource type="PackedScene" uid="uid://cy8vchw2afha" path="res://modules/minigame/water_target_fishing/game/components/ai_movement.tscn" id="2_hqo1h"]
[ext_resource type="Texture2D" uid="uid://8jjmwnkldgjc" path="res://assets/minigames/water_target_fishing/the_fishiest_fish_to_ever_fish_and_not_a_banana_or_other_suspiciously_cylindrical_shapes.png" id="3_a1xwd"]
[ext_resource type="PackedScene" uid="uid://b0rds620qhx3g" path="res://modules/minigame/water_target_fishing/game/components/wave_movement.tscn" id="3_hqo1h"]
[ext_resource type="PackedScene" uid="uid://cv07bohrg1jxl" path="res://modules/minigame/water_target_fishing/game/components/velocity.tscn" id="5_0j58w"]
[ext_resource type="PackedScene" uid="uid://yvs3xuoebut" path="res://modules/minigame/water_target_fishing/game/components/flip.tscn" id="6_0e15p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7m00e"]
radius = 15.0

[node name="WtfFish" type="Node2D"]
script = ExtResource("1_c7cp5")

[node name="Visuals" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_a1xwd")

[node name="WtfAiMovementComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("2_hqo1h")]
unique_name_in_owner = true
velocity_component = NodePath("../WtfVelocityComponent")

[node name="WtfWaveMovementComponent" parent="." instance=ExtResource("3_hqo1h")]
unique_name_in_owner = true
speed = Vector2(0, 40)

[node name="WtfVelocityComponent" parent="." instance=ExtResource("5_0j58w")]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 0)
shape = SubResource("CircleShape2D_7m00e")

[node name="WtfFlipComponent" parent="." node_paths=PackedStringArray("target", "velocity_component") instance=ExtResource("6_0e15p")]
target = NodePath("..")
velocity_component = NodePath("../WtfVelocityComponent")
